--- a/my-portfolio/src/components/Hero.css
+++ b/my-portfolio/src/components/Hero.css
@@ -57,7 +57,8 @@ p {
     border-color: #f4a261;
     margin-top: 1px;
     transition: 0.3s;
-    border: 2px solid #f4a261;}
+    border: 2px solid #f4a261;
+    cursor: pointer;}
 
 .btn:hover {
     background: #f4a261;
