--- a/my-portfolio/src/components/Footer.css
+++ b/my-portfolio/src/components/Footer.css
@@ -1,6 +1,77 @@
 .footer {
-    background: #0d0d26;
-    text-align: center;
-    padding: 1rem;
+  background-color: #0a192f;
+  color: white;
+  padding: 40px 10%;
+}
+
+.footer-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.footer-logo .logo-title {
+  font-size: 1.5rem;
+  font-weight: bold;
+  font-weight: 300;
+}
+.footer-logo .logo-subtitle{
+  font-size: 1rem;
+  font-weight: 300;
+}
+
+.footer-logo .logo-title span {
+  color: #39c0ed;
+}
+
+.footer-section {
+  text-align: left;
+}
+
+.footer-section h3 {
+  font-size: 1.2rem;
+  margin-bottom: 10px;
+}
+.footer-section a{
+  font-size: 1rem;
+}
+
+.footer-section a {
+  color: #39c0ed;
+  text-decoration: none;
+}
+
+.footer-section a:hover {
+  text-decoration: underline;
+}
+
+.social-icons {
+  display: flex;
+  gap: 15px;
+}
+
+.social-icons a {
+  background-color: white;
+  color: #0a192f;
+  width: 35px;
+  height: 35px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  font-size: 1.2rem;
+  transition: transform 0.3s;
+}
+
+
+
+@media (max-width: 768px) {
+  .footer-container {
+      flex-direction: column;
+      text-align: center;
   }
-  
+  .social-icons {
+      justify-content: center;
+  }
+}
