--- a/my-portfolio/src/components/Education.css
+++ b/my-portfolio/src/components/Education.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #0B1E4D;
+    background-color: #081836;
     color: #39c0ed;
     font-family: 'Times New Roman', serif;
   }
@@ -9,14 +9,14 @@ body {
     margin: 20px auto;
     padding: 20px;
     border-radius: 12px;
-    background-color: #0B1E4D;
+    background-color: #081836;
     text-align: left;
     margin-left: 22%;
 }
 
   .education-section{
     display: flex;
-    background-color:#0B1E4D;
+    background-color:#081836;
   }
   .education-logo{
     display: flex;
